# voice-assistant-demo

./: .env.sample  .gitignore  README.md  pyproject.toml
src/: assistant.py  main.py  tts_server.py  whisper_mic.py
